--- a/index.html
+++ b/index.html
@@ -74,21 +74,21 @@
               <div class="dp-text">
                 <span>CRAFTED BY OUR MASTER CHEFS</span>
               </div>
-              <img src="images/chop1.jpg" alt=""></img>
+              <img src="chop1.jpg" alt=""></img>
             </div>
 
             <div class="col-lg-4 col-md-6 col-sm-6 dp dp2">
               <div class="dp-text">
                 <span>USING THE FINEST INGREDIENTS</span>
               </div>
-              <img src="images/peppered snail1.png" alt=""></img>
+              <img src="peppered snail1.png" alt=""></img>
             </div>
 
             <div class="col-lg-4 dp dp3">
                 <div class="dp-text">
                   <span>SERVED WITH CARE AND PASSION</span>
                 </div>
-                <img src="images/spaghetti1.jpg" alt=""></img>
+                <img src="spaghetti1.jpg" alt=""></img>
 
             </div>
           </div>
@@ -135,7 +135,7 @@
         <div class="row">
 
           <div class="col-lg-5">
-            <img src="images/table1.jpg" alt="">
+            <img src="table1.jpg" alt="">
           </div>
 
           <div class="col-lg-7 menu-box">
@@ -251,7 +251,7 @@
             </div>
 
             <div class="col-lg-6 welcome-img">
-              <img src="images/restaurant_int1.jpg" alt="">
+              <img src="restaurant_int1.jpg" alt="">
             </div>
 
             <div class="col-lg-6 welcome-text">
